# cursed_tarot

./: .gitignore  Cargo.toml  README.md
src/: cardtxt.txt  deck.rs  main.rs  nomer.rs
src/card_files/trumps/: RWSa-T-00.txt  RWSa-T-01.txt  RWSa-T-02.txt  RWSa-T-03.txt  RWSa-T-04.txt  RWSa-T-05.txt  RWSa-T-06.txt  RWSa-T-07.txt  RWSa-T-08.txt  RWSa-T-09.txt  RWSa-T-10.txt  RWSa-T-11.txt  RWSa-T-12.txt  RWSa-T-13.txt  RWSa-T-14.txt  RWSa-T-15.txt  RWSa-T-16.txt  RWSa-T-17.txt  RWSa-T-18.txt  RWSa-T-19.txt  RWSa-T-20.txt  RWSa-T-21.txt  test58-40.txt
src/deck/: card.rs  nomer.rs
