[package]
name = "cursed_tarrot"
version = "0.1.0"
authors = ["zu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16.3"
nom = "6.1.2"
fastrand = "1.4.1"
colorsys = "0.6.3"
unicode-segmentation = "1.7.1"